--- a/la/index.html
+++ b/la/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Cocos Creator | NewProject_2</title>
+    <title>Cocos Creator | TDJ</title>
 
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui=true"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -20,7 +20,7 @@
     <link rel="icon" href="favicon.ico"/>
   </head>
   <body>
-    <h1 class="header">NewProject_2</h1>
+    <h1 class="header">TDJ</h1>
 
     <div id="GameDiv" style="width: 1280px; height: 960px;">
       <div id="Cocos3dGameContainer">
